--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ script:
     - export PARSL_TESTING="true"
     - pip install -r test-requirements.txt
     - flake8 parsl/
-    - (for test in parsl/tests/test*; do pytest $test --config local || exit; done ) ;
+    - (for test in parsl/tests/test*; do pytest $test --basic || exit; done ) ;
     # - pytest parsl/tests --config parsl/tests/configs/local_threads.py
     # - pytest parsl/tests --config parsl/tests/configs/local_ipp.py
